# biiot-prototype

./: .gitignore  Cargo.toml
accounts/: Cargo.toml
accounts/src/: lib.rs
basic-http/: Cargo.toml
basic-http/src/: body.rs  header.rs  lib.rs  request.rs  response.rs  server.rs  status.rs
common/: Cargo.toml
common/src/: fileutil.rs  lib.rs  printutil.rs  strutil.rs  timeutil.rs  u256util.rs  vecutil.rs
consensus/: Cargo.toml
consensus/src/: engine.rs  lib.rs
crypto/: Cargo.toml
crypto/src/: hash.rs  key.rs  lib.rs  message.rs  secp256k1.rs
ledger/: Cargo.toml
ledger/src/: account.rs  constant.rs  dirty_state.rs  ledger.rs  lib.rs  pool.rs  sql_util.rs  table.rs  transaction.rs
network/: Cargo.toml
network/src/: lib.rs  main.rs  options.rs  p2p.rs  urpc.rs
network/src/rpc/: constants.rs  engine.rs  handler.rs  method_names.rs  methods.rs  mod.rs  request.rs  response.rs  server.rs
src/: lib.rs  main.rs
vm/: Cargo.toml  event_sample.code  storage_sample.code
vm/src/: constants.rs  context.rs  contract.rs  err.rs  evm.rs  instruction.rs  interpreter.rs  jumptable.rs  lib.rs  main.rs  memory.rs  opcode.rs  stack.rs
