[package]
name = "biiot-prototype"
version = "0.1.0"
authors = ["Al"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "common" }
crypto = { path = "crypto" }
ledger = { path = "ledger" }
network = { path = "network" }
