[package]
name = "accounts"
version = "0.1.0"
authors = ["elHongsh <elhongsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.10"
hex = "0.4.3"
common = { path = "../common" }
crypto = { path = "../crypto" }
ledger = { path = "../ledger" }