[package]
name = "crypto"
version = "0.1.0"
authors = ["elHongsh <elhongsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.10.0"
secp256k1 = { version = "0.20", features = ["default", "recovery"] }
rand = "0.8.3"
sha3 = "0.9.1"