[package]
name = "network"
version = "0.1.0"
authors = ["elHongsh <elhongsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.10.0"
rlp = "0.5.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
accounts = { path = "../accounts" }
crypto = { path = "../crypto" }
ledger = { path = "../ledger" }
basic-http = { path = "../basic-http" }